<resources>
    <string name="app_name">Media das Notas</string>
    <string name="textTitle">Média das Notas</string>
    <string name="btnCalcular">Calcular</string>
    <string name="lblNotaOne">Nota 1</string>
    <string name="lblNotaTwo">Nota 2</string>
    <string name="lblNotaThree">Nota 3</string>
    <string name="inputNotaOne">0</string>
    <string name="inputNotaTwo">0</string>
    <string name="inputNotaThree">0</string>
    <string name="result">0</string>
    <string name="resultText">Resultado</string>
    <string name="resultNota" />
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
</resources>